new page added to nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="{{ "/" | relative_url }}">Home</a></li>
             <li><a href="{{ "/docs/intro" | relative_url }}">Introduction</a></li>
+            <li><a href="{{ "/docs/aimodels" | relative_url }}">OCR Tools & AI Models</a></li>
             <li><a href="{{ "/docs/preprocessing" | relative_url }}">Preprocessing</a></li>
             <li><a href="{{ "/docs/layoutrecognition" | relative_url }}">Layout Recognition</a></li>
             <li><a href="{{ "/docs/postprocessing" | relative_url }}">Postprocessing</a></li>
