--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,15 @@
             <li><a href="{{ "/docs/userdata" | relative_url }}">User Data</a></li>
         </ul>
     </nav>
+
+    <div class="sidebar-footer">
+    <a href="{{ site.github_repo }}" class="github-button" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-github"></i> View on GitHub
+    </a>
+    <p class="impressum">
+        {{ site.impressum }}
+    </p>
+    </div>
 </aside>
 
         <main class="content">
