--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,5 +41,6 @@
             {{ content }}
         </main>
     </div>
+    <script src="{{ "/assets/js/sidebar.js" | relative_url }}"></script>
 </body>
 </html>
