--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
 
-            <!-- Sidebar Footer (Moved Inside Sidebar) -->
+            <!-- Sidebar Footer -->
             <div class="sidebar-footer">
                 <a href="{{ site.github_repo }}" class="github-button" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> View on GitHub
@@ -51,3 +51,4 @@
 
 </body>
 </html>
+
